[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
description = "mood tracking web application"
edition = "2021"
name = "equanimity"
version = "1.9.5"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.38"
gloo = "0.11.0"
gloo-storage = "0.3.0"
group_by = {git = "https://github.com/Terkwood/group_by.rs", tag = "v0.1.0"}
js-sys = "0.3.70"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
web-sys = {version = "0.3.70", features = ["Window", "Storage", "Event", "EventTarget","HtmlTextAreaElement"]}
yew = {version = "0.21.0", features = ["csr"]}
yew-datepicker = {git = "https://github.com/Terkwood/yew-datepicker",  branch = "hack/english" }
yew-export-button = {git = "https://github.com/Terkwood/yew-export-button", tag = "v3.0.0" }
